# kokoro-tts

./: README.md  api.py  gradio_interface.py  main.py  pyproject.toml  setup.py  test_voices.py
static/: manifest.json
tests/: test_api.py  test_list_voices.py
